Resolve Accessibility issues

--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -95,7 +95,10 @@ body{
 }
 
 .testimonial{
-    padding: 1.5rem;
+    padding: 1.2rem;
+    font-weight: normal;
+    font-size: 1.1rem;
+
 }
 
 .name{
@@ -129,7 +132,7 @@ body{
 
 .testimonial{
     line-height: 2rem;
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     padding: 3rem 7rem 2rem 0rem;
 }
 }
