--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,9 @@ body {
 }
 
 .main-container .testimonial {
-  padding: 1.5rem;
+  padding: 1.2rem;
+  font-weight: normal;
+  font-size: 1.1rem;
 }
 
 .main-container .name {
@@ -146,7 +148,7 @@ body {
   }
   .main-container .testimonial {
     line-height: 2rem;
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     padding: 3rem 7rem 2rem 0rem;
   }
 }
